--- a/app/src/main/res/layout/fragment_restuarant_reviews.xml
+++ b/app/src/main/res/layout/fragment_restuarant_reviews.xml
@@ -7,190 +7,207 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     >
+        <RelativeLayout
+            android:id="@+id/reviews_top_section_layout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:paddingBottom="@dimen/activity_vertical_margin">
+            <RelativeLayout
+                android:id="@+id/reviews_overview_layout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:paddingRight="@dimen/activity_horizontal_margin">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+                <TextView
+                    android:id="@+id/reviews_average_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:text="3.5"
+                    android:textSize="45dp"
+                    android:textAlignment="center"/>
+
+                <RatingBar
+                    android:id="@+id/reviews_average_ratingbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:isIndicator="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@id/reviews_average_textview"/>
+
+                <TextView
+                    android:id="@+id/reviews_totalReviewsNr_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="70 Reviews"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@id/reviews_average_ratingbar"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toRightOf="@id/reviews_overview_layout"
+                android:layout_alignParentRight="true">
+
+                <!-- FIVE -->
+                <TextView
+                    android:id="@+id/reviews_five_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:paddingRight="10dp"
+                    android:text="5"/>
+
+                <!-- match parent for progress bar works as well -->
+                <!-- android:scaleY="2.5" is used to increase the height of the bar -->
+                <ProgressBar
+                    android:id="@+id/reviews_five_progressbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/LinearProgress"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_marginRight="5dp"
+                    android:indeterminate="false"
+                    android:progress="50"
+                    android:max="100"
+                    android:scaleY="2.5"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_toRightOf="@id/reviews_five_textview" />
+
+                <!-- FOUR -->
+
+                <TextView
+                    android:id="@+id/reviews_four_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@id/reviews_five_textview"
+                    android:paddingRight="10dp"
+                    android:text="4"/>
+
+                <ProgressBar
+                    android:id="@+id/reviews_four_progressbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/LinearProgress"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_marginRight="5dp"
+                    android:indeterminate="false"
+                    android:progress="30"
+                    android:max="100"
+                    android:scaleY="2.5"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@id/reviews_four_textview"
+                    android:layout_below="@id/reviews_five_progressbar"
+                    android:layout_toRightOf="@id/reviews_four_textview"/>
+
+                <!-- THREE -->
+
+                <TextView
+                    android:id="@+id/reviews_three_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@id/reviews_four_textview"
+                    android:paddingRight="10dp"
+                    android:text="3"/>
+
+                <ProgressBar
+                    android:id="@+id/reviews_three_progressbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/LinearProgress"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_marginRight="5dp"
+                    android:indeterminate="false"
+                    android:progress="35"
+                    android:max="100"
+                    android:scaleY="2.5"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@id/reviews_three_textview"
+                    android:layout_below="@id/reviews_four_progressbar"
+                    android:layout_toRightOf="@id/reviews_three_textview"/>
+
+                <!-- TWO -->
+
+                <TextView
+                    android:id="@+id/reviews_two_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@id/reviews_three_textview"
+                    android:paddingRight="10dp"
+                    android:text="2"/>
+
+                <ProgressBar
+                    android:id="@+id/reviews_two_progressbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/LinearProgress"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_marginRight="5dp"
+                    android:indeterminate="false"
+                    android:progress="90"
+                    android:max="100"
+                    android:scaleY="2.5"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@id/reviews_two_textview"
+                    android:layout_below="@id/reviews_three_progressbar"
+                    android:layout_toRightOf="@id/reviews_two_textview"/>
+
+                <!-- ONE -->
+
+                <TextView
+                    android:id="@+id/reviews_one_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_below="@id/reviews_two_textview"
+                    android:paddingRight="10dp"
+                    android:text="1"/>
+
+                <ProgressBar
+                    android:id="@+id/reviews_one_progressbar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/LinearProgress"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_marginRight="5dp"
+                    android:indeterminate="false"
+                    android:progress="100"
+                    android:max="100"
+                    android:scaleY="2.5"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignTop="@id/reviews_one_textview"
+                    android:layout_below="@id/reviews_two_progressbar"
+                    android:layout_toRightOf="@id/reviews_one_textview"/>
+
+            </RelativeLayout>
+        </RelativeLayout>
+
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/reviews_top_section_layout">
 
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="0.6"
-            android:layout_height="wrap_content">
-
-            <!-- FIVE -->
-            <TextView
-                android:id="@+id/reviews_five_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:paddingRight="10dp"
-                android:text="5"/>
-
-            <!-- match parent for progress bar works as well -->
-            <!-- android:scaleY="2.5" is used to increase the height of the bar -->
-            <ProgressBar
-                android:id="@+id/reviews_five_progressbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:theme="@style/LinearProgress"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_marginRight="5dp"
-                android:indeterminate="false"
-                android:progress="50"
-                android:max="100"
-                android:scaleY="2.5"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentRight="true"
-                android:layout_toRightOf="@id/reviews_five_textview" />
-
-            <!-- FOUR -->
-
-            <TextView
-                android:id="@+id/reviews_four_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/reviews_five_textview"
-                android:paddingRight="10dp"
-                android:text="4"/>
-
-            <ProgressBar
-                android:id="@+id/reviews_four_progressbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:theme="@style/LinearProgress"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_marginRight="5dp"
-                android:indeterminate="false"
-                android:progress="30"
-                android:max="100"
-                android:scaleY="2.5"
-                android:layout_alignParentRight="true"
-                android:layout_alignTop="@id/reviews_four_textview"
-                android:layout_below="@id/reviews_five_progressbar"
-                android:layout_toRightOf="@id/reviews_four_textview"/>
-
-            <!-- THREE -->
-
-            <TextView
-                android:id="@+id/reviews_three_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/reviews_four_textview"
-                android:paddingRight="10dp"
-                android:text="3"/>
-
-            <ProgressBar
-                android:id="@+id/reviews_three_progressbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:theme="@style/LinearProgress"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_marginRight="5dp"
-                android:indeterminate="false"
-                android:progress="35"
-                android:max="100"
-                android:scaleY="2.5"
-                android:layout_alignParentRight="true"
-                android:layout_alignTop="@id/reviews_three_textview"
-                android:layout_below="@id/reviews_four_progressbar"
-                android:layout_toRightOf="@id/reviews_three_textview"/>
-
-            <!-- TWO -->
-
-            <TextView
-                android:id="@+id/reviews_two_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/reviews_three_textview"
-                android:paddingRight="10dp"
-                android:text="2"/>
-
-            <ProgressBar
-                android:id="@+id/reviews_two_progressbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:theme="@style/LinearProgress"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_marginRight="5dp"
-                android:indeterminate="false"
-                android:progress="90"
-                android:max="100"
-                android:scaleY="2.5"
-                android:layout_alignParentRight="true"
-                android:layout_alignTop="@id/reviews_two_textview"
-                android:layout_below="@id/reviews_three_progressbar"
-                android:layout_toRightOf="@id/reviews_two_textview"/>
-
-            <!-- ONE -->
-
-            <TextView
-                android:id="@+id/reviews_one_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/reviews_two_textview"
-                android:paddingRight="10dp"
-                android:text="1"/>
-
-            <ProgressBar
-                android:id="@+id/reviews_one_progressbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:theme="@style/LinearProgress"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_marginRight="5dp"
-                android:indeterminate="false"
-                android:progress="100"
-                android:max="100"
-                android:scaleY="2.5"
-                android:layout_alignParentRight="true"
-                android:layout_alignTop="@id/reviews_one_textview"
-                android:layout_below="@id/reviews_two_progressbar"
-                android:layout_toRightOf="@id/reviews_one_textview"/>
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="0dp"
-            android:layout_weight="0.3"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/reviews_average_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:text="3.5"
-                android:textAlignment="center"/>
-
-            <RatingBar
-                android:id="@+id/reviews_average_ratingbar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                style="?android:attr/ratingBarStyleSmall"
-                android:isIndicator="true"
-                android:layout_alignParentLeft="true"
-                android:layout_below="@id/reviews_average_textview"/>
-
-            <TextView
-                android:id="@+id/reviews_totalReviewsNr_textview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Reviews"
-                android:layout_alignParentLeft="true"
-
-                android:layout_alignParentBottom="true"/>
-
-        </RelativeLayout>
-
-        <!--android:layout_below="@id/reviews_totalReviewsNr_textview"-->
-
-    </LinearLayout>
-
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/reviews_listview"
+            android:layout_below="@id/restaurant_reviews_ratingbar"/>
+    </RelativeLayout>
+    
 </RelativeLayout>
