--- a/app/src/main/res/layout/fragment_restaurant_reservations.xml
+++ b/app/src/main/res/layout/fragment_restaurant_reservations.xml
@@ -1,18 +1,97 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    >
-    <!--tools:context=".customviews.RestaurantReservationFragment"-->
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/section_label"
+    <RelativeLayout
+        android:id="@+id/reservation_dateTime_selection_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin">
+
+        <ImageView
+            android:id="@+id/reservation_icon_calendar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:paddingRight="10dp"
+            android:src="@drawable/ic_calendar_black_24dp"
+            />
+
+        <TextView
+            android:id="@+id/reservation_tableOnDate_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/reservation_icon_calendar"
+            android:text="Table on"
+            />
+
+        <TextView
+            android:id="@+id/reservation_calendar_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/reservation_tableOnDate_textview"
+            android:text="--/--/----"
+            android:textStyle="bold"
+            />
+
+        <TextView
+            android:id="@+id/reservation_tableAtTime_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/reservation_calendar_textview"
+            android:text="at" />
+
+        <TextView
+            android:id="@+id/reservation_time_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="10dp"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@id/reservation_tableAtTime_textview"
+            android:text="--:--"
+            android:textStyle="bold"
+            />
+
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/reservation_find_table_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@id/reservation_dateTime_selection_layout"
+        android:text="Find Table"
+        android:background="@color/red"/>
+
+    <GridView
+        android:id="@+id/reservation_tables_gridview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="RESERVATIONS"/>
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:layout_below="@id/reservation_find_table_button"
+        android:columnWidth="100dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp"
+        android:choiceMode="singleChoice"
+        android:stretchMode="spacingWidthUniform">
+
+    </GridView>
 
 </RelativeLayout>
