--- a/app/src/main/res/layout/fragment_restaurant_reservations.xml
+++ b/app/src/main/res/layout/fragment_restaurant_reservations.xml
@@ -76,22 +76,38 @@
         android:text="Find Table"
         android:background="@color/red"/>
 
-    <GridView
-        android:id="@+id/reservation_tables_gridview"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:id="@+id/reservation_tableResults_layout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:layout_below="@id/reservation_find_table_button"
-        android:columnWidth="100dp"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
-        android:choiceMode="singleChoice"
-        android:stretchMode="spacingWidthUniform">
+        android:layout_below="@id/reservation_find_table_button">
 
-    </GridView>
+
+
+    </RelativeLayout>
+
+    <!--<GridView-->
+        <!--android:id="@+id/reservation_tables_gridview"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
+        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
+        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
+        <!--android:paddingTop="@dimen/activity_vertical_margin"-->
+        <!--android:layout_below="@id/reservation_find_table_button"-->
+
+
+        <!--android:columnWidth="100dp"-->
+        <!--android:numColumns="auto_fit"-->
+        <!--android:verticalSpacing="10dp"-->
+        <!--android:horizontalSpacing="10dp"-->
+        <!--android:choiceMode="singleChoice"-->
+        <!--android:stretchMode="spacingWidthUniform">-->
+
+    <!--</GridView>-->
 
 </RelativeLayout>
